Fixed An Error.

--- a/_layouts/redirect.html
+++ b/_layouts/redirect.html
@@ -31,8 +31,8 @@
 			  window.location = newUrl;
 		  }, 2000);
 	  }
-	  console(expression);
-	  console(expression.trim());
+	  console.log(expression);
+	  console.log(expression.trim());
   </script>
 
   <meta http-equiv="refresh" content="0; url={{ page.redirect.to }}">
