--- a/_layouts/redirect.html
+++ b/_layouts/redirect.html
@@ -1,43 +1,44 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  {% if site.google_analytics %}
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', '{{ site.google_analytics }}');
-  </script>
-  {% endif %}
-  <meta charset="utf-8">
-  <title>Redirecting&hellip;</title>
-  <link rel="canonical" href="{{ page.redirect.to }}">
-  <script>
-//	  location="{{ page.redirect.to }}"
-  </script>
+{% if site.google_analytics %}
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
+<script>
+	window.dataLayer = window.dataLayer || [];
 
-  <script type="text/javascript">
-	  const queryString = window.location.search;
-	  const urlParams = new URLSearchParams(queryString);
-	  /**
-	   * @type {string}
-	   */
-	  const expression = urlParams.get('e');
-	  if (expression && expression.trim() !== '') {
-		  const newUrl = `{{ page.redirect.to }}/${expression}`;
-		  console.log(`Redirect user to ${newUrl}`);
-		  setTimeout(() => {
-			  window.location = newUrl;
-		  }, 2000);
-	  }
-	  console.log(expression);
-	  console.log(expression.trim());
-  </script>
+	function gtag() {
+		dataLayer.push( arguments );
+	}
 
-  <meta http-equiv="refresh" content="0; url={{ page.redirect.to }}">
-  <meta name="robots" content="noindex">
+	gtag( 'js', new Date() );
+	gtag( 'config', '{{ site.google_analytics }}' );
+</script>
+{% endif %}
+<meta charset="utf-8">
+<title>Redirecting&hellip;</title>
+<link rel="canonical" href="{{ page.redirect.to }}">
 
-  <h1>Redirecting&hellip;</h1>
-  <a href="{{ page.redirect.to }}">Click here if you are not redirected.</a>
+<script type="text/javascript">
+	const queryString = window.location.search;
+	const urlParams   = new URLSearchParams( queryString );
+	/**
+	 * @type {string}
+	 */
+	const expression  = urlParams.get( 'e' );
+	if( expression && expression.trim() !== '' ) {
+		var newurl   = '{{ page.redirect.to }}';
+		newurl       = newurl.trim( '/' );
+		const newUrl = newurl + `/${expression}`;
+		console.log( `Redirect user to ${newUrl}` );
+		setTimeout( () => {
+			window.location = newUrl;
+		}, 2000 );
+	}
+</script>
+
+<meta http-equiv="refresh" content="0; url={{ page.redirect.to }}">
+<meta name="robots" content="noindex">
+
+<h1>Redirecting&hellip;</h1>
+<a href="{{ page.redirect.to }}">Click here if you are not redirected.</a>
 </html>
