Changed Query Param To q

--- a/_layouts/redirect.html
+++ b/_layouts/redirect.html
@@ -24,7 +24,7 @@
 	/**
 	 * @type {string}
 	 */
-	const expression  = urlParams.get( 'e' );
+	const expression  = urlParams.get( 'q' );
 	if( expression && expression.trim() !== '' ) {
 		var newurl   = '{{ page.redirect.to }}';
 		newurl       = newurl.trim( '/' );
