--- a/_layouts/redirect.html
+++ b/_layouts/redirect.html
@@ -5,31 +5,17 @@
 <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
 <script>
 	window.dataLayer = window.dataLayer || [];
-
-	function gtag() {
-		dataLayer.push( arguments );
-	}
-
-	gtag( 'js', new Date() );
-	gtag( 'config', '{{ site.google_analytics }}' );
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+	gtag('config', '{{ site.google_analytics }}');
 </script>
 {% endif %}
 <meta charset="utf-8">
 <title>Redirecting&hellip;</title>
 <link rel="canonical" href="{{ page.redirect.to }}">
-
-<script type="text/javascript">
-	var urlParams  = new URLSearchParams( window.location.search );
-	let expression = urlParams.get( 'q' );
-	if( expression && expression.trim() !== '' ) {
-		window.location = '{{ page.redirect.to }}' + `/${expression}`;
-	} else {
-		location = '{{ page.redirect.to }}';
-	}
-</script>
-
+<script>location="{{ page.redirect.to }}"</script>
+<meta http-equiv="refresh" content="0; url={{ page.redirect.to }}">
 <meta name="robots" content="noindex">
-
 <h1>Redirecting&hellip;</h1>
 <a href="{{ page.redirect.to }}">Click here if you are not redirected.</a>
 </html>
